<resources>
    <string name="app_name">Thiraseela</string>
    <string name="about">An Online Media for Performing Arts</string>
    <string name="artists">Artists</string>
    <string name="troupes">Troupes</string>
    <string name="academy">Academy</string>
    <string name="events">Events</string>
    <string name="about_us">About Us</string>
    <string name="info">info@thiraseela.com</string>
    <string name="title_activity_artist_list">Performing Artists</string>
    <string name="title_activity_troupes_list">Troupes</string>
    <string name="icon">Icon</string>
    <string name="title_activity_academy_list">Academy</string>
    <string name="title_activity_events_list">Events</string>
    <string name="search_artist">Search by name</string>
    <string name="title_activity_artist_detail">Artist Detail</string>
    <string name="performer_img">Performer Image</string>
    <string name="title_activity_troupes_detail">Troupes Detail</string>
    <string name="title_activity_academy_detail">Academy Detail</string>
    <string name="title_activity_events_detail">Events Details</string>
    <string name="loading">Loading…</string>
    <string name="home">Home</string>
    <string name="event_name">Event Name</string>
    <string name="category">Category</string>
    <string name="by">By</string>
    <string name="venue">Venue</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="contact_details">Contact Details</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="phone">phone</string>
    <string name="empty_view">No matching records found!!!</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="retry">Retry</string>
</resources>
