<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/performer_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/performer_img"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/event_name"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/event_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/category"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/by"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/by"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/venue"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/venue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/city"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/date"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/time"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:textColor="#000000"/>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/contact_details"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="#ffffff"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/name"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/contact_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:textColor="#000000"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mobile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/mobile"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/mobile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:autoLink="all"
                        android:textColor="#000000"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/phone"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:autoLink="all"
                        android:textColor="#000000"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text="@string/email"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:autoLink="all"
                        android:textColor="#000000"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/web_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:autoLink="all"
                        android:text="@string/website"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/web"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:autoLink="all"
                        android:textColor="#000000"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>