<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/timeoutLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/connection_timeout"
            android:textColor="#fff"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_selector"
            android:text="@string/retry"
            android:textColor="#ffffff"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="#fff"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</merge>
