<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.ashoksm.thiraseela.ui.TroupesListActivity">

    <ImageView
        android:id="@+id/inner_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/info"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/progressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pbHeaderProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/loading"
                android:textColor="@color/accentColor"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeoutLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/connection_timeout"
                android:textColor="#fff"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/retryButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_selector"
                android:text="@string/retry"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <android.support.v7.widget.CardView android:id="@+id/search_artist"
                                                xmlns:android="http://schemas.android.com/apk/res/android"
                                                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                                android:layout_width="match_parent"
                                                android:layout_height="48dp"
                                                android:layout_alignParentTop="true"
                                                android:layout_margin="6dip"
                                                android:background="#ffffff"
                                                card_view:cardCornerRadius="4dp"
                                                card_view:cardElevation="2dp">

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:drawableLeft="@drawable/ic_searchicon"
                    android:drawableStart="@drawable/ic_searchicon"
                    android:hint="@string/search_artist"/>
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/search_artist">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/info"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/troupes_list_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"/>

                    <TextView
                        android:id="@+id/empty_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/empty_view"
                        android:textColor="#fff"
                        android:textSize="14sp"
                        android:visibility="gone"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/info"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/accentColor"
                    android:gravity="center"
                    android:text="@string/info"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.Toolbar android:id="@+id/my_awesome_toolbar"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       android:layout_width="match_parent"
                                       android:layout_height="?attr/actionBarSize"
                                       android:background="?attr/colorPrimary"
                                       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                                       app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

</FrameLayout>
